# langcc

./: .gitattributes  .gitignore  2209.08385.adoc  CMakeLists.txt  LICENSE  MANUAL.md  Makefile  README.md  bootstrap.py  bootstrap.sh  deps_macos.sh  deps_ubuntu.sh
.github/workflows/: ci-macos.yml  ci-ubuntu.yml  ci.yml
data/: golang_manifest_gen.txt  py_manifest_gen.txt
examples/basic/: Makefile  basic.lang
examples/calc/: Makefile  calc_main.cpp
examples/lox/: Makefile  lox.cpp  lox.data  lox.hpp  lox.lang  lox_error.data  lox_pre.lang  lox_test_main.cpp  lox_val.hpp  lox_val_fwd.hpp
examples/lox/test/: README.txt
examples/lox/test/for/: statement_condition.lox  statement_initializer.lox
examples/lox/test/function/: too_many_arguments.lox  too_many_parameters.lox
examples/lox/test/inheritance/: set_fields_from_base_class.lox
examples/lox/test/limit/: loop_too_large.lox  no_reuse_constants.lox  too_many_constants.lox  too_many_locals.lox  too_many_upvalues.lox
examples/lox/test/method/: too_many_arguments.lox  too_many_parameters.lox
examples/lox/test/ml/: class_capture.lox  class_inherit_nil.lox  class_name_eq.lox  collide_with_global.lox  collide_with_parameter1.lox  collide_with_parameter2.lox  for_closure_in_body_minimal.lox  inherit_bwd.lox  init_early_return_field.lox  init_standalone.lox  super1.lox  super2.lox  super3.lox  super4.lox  super5.lox  super6.lox
examples/lox/test/super/: super_at_top_level.lox
grammars/: cc.lang  data.lang  go.lang  meta.lang  py.lang
grammars/test/: arith1_prec1.lang  arith_naive1_named.lang  arith_naive2_alt.lang  arith_naive3_indirect.lang  arith_prec1.lang  arith_prec2.lang  arith_prec3.lang  arith_prec4.lang  attr_basic1.lang  attr_basic2.lang  attr_cps.lang  attr_iter_cps1.lang  attr_iter_cps2.lang  attr_nested.lang  attr_nested_pos1a.lang  attr_nested_pos1b.lang  attr_nested_pos1c.lang  attr_nested_pos2.lang  attr_nested_pos3.lang  attr_nested_pos4.lang  attr_pos1.lang  attr_predict_multi.lang  attr_single.lang  basic_a.lang  basic_ab.lang  basic_ab_concat.lang  basic_block_comment1.lang  basic_cps1.lang  basic_cps2a.lang  basic_cps2b.lang  basic_cps3.lang  basic_cps4.lang  basic_optional.lang  basic_parens.lang  basic_rep.lang  basic_rep_list1.lang  basic_rep_list2.lang  basic_rep_list3.lang  basic_rep_list4.lang  basic_rep_list5.lang  (+121 more)
src/: cc.hpp  common.data  common.hpp  data.hpp  datacc.cpp  datacc.hpp  datacc_main.cpp  go_standalone_bidir_test.cpp  go_standalone_test.cpp  golang_manifest_gen.py  grammar.hpp  graph.hpp  langcc.cpp  langcc.hpp  langcc_common.hpp  langcc_emit.cpp  langcc_encode.cpp  langcc_lexer.cpp  langcc_main.cpp  langcc_normalize.cpp  langcc_parser_attr.cpp  langcc_parser_cps.cpp  langcc_parser_flatten.cpp  langcc_parser_lr.cpp  langcc_rt.hpp  langcc_util.hpp  meta.hpp  nfa.hpp  py_manifest_gen.py  py_standalone_bidir_test.cpp  py_standalone_test.cpp  test_lang_single_main.cpp  unittest_lang_main.cpp  unittest_lib_main.cpp  util_test.hpp
test/: CMakeLists.txt  go_standalone_bidir_test.cpp  go_standalone_test.cpp  py_standalone_bidir_test.cpp  py_standalone_test.cpp  py_standalone_test.py  test_common.hpp  test_lang_single_main.cpp  testlib.hpp  unittest_lang.cpp  unittest_lang_main.cpp  unittest_lib.cpp  unittest_lib_main.cpp  util_test.hpp
tests/: gost.go  py_standalone_test.cpp  unittest_lang_main.cpp  util_test.hpp
